fixed alignment Home in Mobile

--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -1,4 +1,3 @@
-
 /* FLEXBOX stuff we want to render right here for App*/
 .App {
   display: -webkit-box;
@@ -12,7 +11,6 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  text-align: center;
 }
 
 .App > * {
@@ -83,10 +81,10 @@
 
 @media all and (max-width: 600px) {
 
-  .App {
-    text-align: left;
-    align-items: flex-start;
-  }
+.App > * {
+      -ms-flex: none;
+          flex: none;
+}
 
   /* make sure the side texts are visible all the time */
   .hidden {
@@ -99,14 +97,15 @@
   }
 
   .Bottom .font {
-  display: none;
+    display: none;
   }
 
   .Top, .Right, .Bottom, .Left {
     font-size: 1.6rem;
-    margin: 2vh;
-}
+    margin-left: 4vh;
+    margin-right: 4vh;
 
+  }
 }
 
 
